--- a/BmsWpf/MainWindow.xaml
+++ b/BmsWpf/MainWindow.xaml
@@ -3,10 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf"
+        xmlns:local="clr-namespace:BmsWpf" 
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="549.935" Width="725.398" FontSize="14" Background="#FF030F1D">
-    <Border Background="#2e3137" CornerRadius="20" Margin="20,20,20.2,13">
+	<Window.DataContext>
+		<viewModels:MainWindowViewModel />
+	</Window.DataContext>
+	<Border Background="#2e3137" CornerRadius="20" Margin="20,20,20.2,13">
         <Grid Margin="10,0,-9.8,-36.8" RenderTransformOrigin="0.376,0.485" Height="524" VerticalAlignment="Top">
             <Grid.RowDefinitions>
                 <RowDefinition Height="464*"/>
@@ -16,8 +20,7 @@
             <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359,259" Foreground="White" FontSize="22"/>
             <Button Content="Manage Offers" Background="#FF104C71" Margin="67,224,359,186" Foreground="White" FontSize="22"/>
             <Button Content="Inquiries" Background="#FF104C71" Margin="358,224,68,186" Foreground="White" FontSize="22"/>
-            <Button Content="Clients" Background="#FF104C71" Margin="358,151,68,259" Foreground="White" FontSize="22"/>
-            <Button Content="Contracts" Background="#FF104C71" Margin="358,294,68,116" Foreground="White" FontSize="22"/>
+            <Button Content="Clients" Background="#FF104C71" Margin="358,151,68,259" Foreground="White" FontSize="22" Command="{Binding Client}"/>
             <Button Content="Suppliers" Background="#FF104C71" Margin="67,294,359,116" Foreground="White" FontSize="22"/>
             <Separator HorizontalAlignment="Left" Height="27" Margin="67,90,0,0" VerticalAlignment="Top" Width="544"/>
             <Separator HorizontalAlignment="Left" Height="27" Margin="67,381,0,0" VerticalAlignment="Top" Width="544"/>
