--- a/BmsWpf/Views/Admin/AddUser.xaml
+++ b/BmsWpf/Views/Admin/AddUser.xaml
@@ -3,9 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views.Admin"
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
+        xmlns:utilities="clr-namespace:BmsWpf.Utilities"
         mc:Ignorable="d"
         Title="AddUser" Height="331.733" Width="350" Background="#FF9F6464">
+    <Window.DataContext>
+        <viewModels:AddUserViewModel />
+    </Window.DataContext>
+    <Window.Resources>
+        <utilities:MultiValueConverter x:Key="MultiValueConverter"/>
+    </Window.Resources>
     <Grid Margin="0,0,-6,-2.6" Background="#FF2E3137">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="257*"/>
@@ -25,20 +32,25 @@
             Width="165"
             Grid.ColumnSpan="2"
             Text="{Binding Username}"/>
-        <PasswordBox Name="PasswordBox"
+        <PasswordBox Name="PassBox"
             HorizontalAlignment="Left"
             Margin="135,111,0,0" 
             VerticalAlignment="Top"
             Grid.ColumnSpan="2" 
             Width="165"
             Height="20"/>
-        <PasswordBox  Name="RepeatPasswordBox"
+        <PasswordBox  Name="RepeatPassBox"
             HorizontalAlignment="Left"
             Margin="135,142,0,0"
             VerticalAlignment="Top"
             Grid.ColumnSpan="2"
             Width="165" 
             Height="20"/>
+        <ComboBox Name="dropdown"
+            Margin="135,182,2.6,0" 
+            VerticalAlignment="Top"
+            ItemsSource="{Binding ClearenceTypes}"
+            SelectedItem="{Binding SelectedClearenceType, Mode=TwoWay}"/>
         <Button Content="Save"
                 HorizontalAlignment="Left"
                 Margin="135,241,0,0"
@@ -46,11 +58,15 @@
                 Width="75"
                 Background="#FF2A7DB0"
                 Foreground="White"
-                Click="Save_click"
-                Command="{Binding Save}" 
-                CommandParameter="{Binding ElementName=PasswordBox}"/>
+                Command="{Binding Save}">
+            <Button.CommandParameter>
+                <MultiBinding Converter="{StaticResource MultiValueConverter}">
+                    <Binding ElementName="PassBox"/>
+                    <Binding ElementName="RepeatPassBox"/>
+                </MultiBinding>
+            </Button.CommandParameter>
+        </Button>
         <Button 
-                Click="Button_Click"
                 Content="Back"
                 HorizontalAlignment="Left"
                 Margin="225,241,0,0" 
@@ -60,14 +76,7 @@
                 Background="#FF972B2B"
                 RenderTransformOrigin="-0.396,0.483"
                 Height="19"
-                Grid.ColumnSpan="2"/>
-        <ComboBox Name="dropdown"
-            HorizontalAlignment="Left"
-            Margin="135,182,0,0" 
-            VerticalAlignment="Top" 
-            Width="120">
-            <ComboBoxItem Content="Admin" />
-            <ComboBoxItem Content="User"/>
-        </ComboBox>
+                Grid.ColumnSpan="2"
+                Command="{Binding Back}"/>
     </Grid>
 </Window>
